fixed broken styles that weren't supposed to be pushed: sorry

--- a/www/main.css
+++ b/www/main.css
@@ -1,22 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap');
 
 body {
+    margin: 0 auto;
+    padding: 0 auto;
     background: linear-gradient(-45deg, #000000, #003459, #007EA7);
     background-size: 100000% 100000%;
     animation: gradient 15s ease infinite;
 }
 
 .main-container {
+    padding-top: 10%;
     text-align: center;
-    position: fixed;
-    padding: 0 auto;
-    margin: 0 auto;
-    top: 30%;
-    left: 45%;
-    /* bring your own prefixes */
-    transform: translate(-30%, -45%);
+    margin: auto;
 }
 
+.center {
+    display: inline-block;
+}
 a {
     margin: 3px auto;
     border-radius: 25px;
